# stt-speedup-bench

./: .gitignore  GEMINI.md  README.md  pyproject.toml
results/: fleurs_whisper_transformers.csv  gpt-4o-transcribe-fine.csv  gpt-4o-transcribe-full.csv  gpt-4o-transcribe.csv  results.txt  whisper-large-v3-turbo-fine.csv  whisper-large-v3-turbo-full.csv  whisper-large-v3-turbo.csv  whisper-medium-fine.csv  whisper-medium-full.csv  whisper-medium.csv  whisper-small-fine.csv  whisper-small-full.csv  whisper-small.csv
scripts/: combined_visualize_results.py  download_dataset.py  duration_stats.py  preprocess_dataset.py  preprocess_fleurs.py  test_tempo_equivalence.py  visualize_results.py
src/: evaluate_fleurs.py  main.py  models.py
